Countries model now returns total country mugs count and user mugs count

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -36,7 +36,7 @@ function ReloadCountries() {
 		$.each(data, function() { 
 			$("<li>").text(this.countryName)
 					 .data('id', this.id)
-					 .data('mugsCount', this.mugsCount)
+					 .data('mugsCountryCount', this.mugsCountryCount)
 					 .appendTo('#countriesList');  
 		});
 		ResizeTags( $('#countriesList li') );
