Still working on user options

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -36,8 +36,18 @@
 <?php endif; ?>
 			</div>
 			<div id="userSettings" class="left">
-				<input type="checkbox" id="userShowOnlyOwnMugs" checked="checked"/><label for="userShowOnlyOwnMugs">Show only own Mugs</label>
-				<input type="checkbox" id="userShowMugsCount" /><label for="userShowMugsCount">Show Mugs count</label>
+<?php if ( $this->userSettings['ShowOnlyOwnMugs'] == 'TRUE' ) : ?>
+				<input type="checkbox" id="userShowOnlyOwnMugs" checked="checked" />
+<?php else : ?>
+				<input type="checkbox" id="userShowOnlyOwnMugs" />
+<?php endif; ?>
+				<label for="userShowOnlyOwnMugs">Show only own Mugs</label>
+<?php if ( $this->userSettings['ShowMugsCount'] == 'TRUE' ) : ?>
+				<input type="checkbox" id="userShowMugsCount" checked="checked" />
+<?php else : ?>
+				<input type="checkbox" id="userShowMugsCount" />
+<?php endif; ?>
+				<label for="userShowMugsCount">Show Mugs count</label>
 			</div>
 			<div class="left right">
 <?php if ( $this->auth->getIdentity()->userRole == 'admin' ) : ?>
